--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -1,9 +1,9 @@
 .header {
-    background-color: blue;
-    color: white;
+    background-color: rgb(0, 129, 167);
+    color: rgb(253, 252, 220);
     display: flex;
     justify-content: center;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     position: relative;
 }
 
@@ -11,6 +11,7 @@
     width: 100%;
     max-width: 1024px;
     margin: 20px 0px 100px 0px;
+    height: fit-content;
 }
 
 .headerContainer.listMode {
@@ -20,7 +21,9 @@
 .headerList {
     display: flex;
     gap: 40px;
-    margin-bottom: 50px;;
+    margin-bottom: 50px;
+    justify-content: space-between;
+    margin-top: 30px;
 }
 
 .headerListItem {
@@ -40,7 +43,7 @@
 }
 
 .headerSearch {
-    border: 3px solid orange;
+    border: 3px solid rgb(240, 113, 103);
     color: black;
     background-color: white;
     display: flex;
@@ -48,14 +51,15 @@
     justify-content: space-around;
     padding: 10px 0px;
     border-radius: 5px;
-    position: absolute;
     bottom: -25px;
     width: 100%;
     max-width: 1024px;
+    border-radius: 10px;
+    height: 35px;
 }
 
 .headerIcon {
-    color: lightgrey
+    color: rgb(0, 175, 185);
 }
 
 .headerSearchItem {
@@ -66,11 +70,13 @@
 
 .headerSearchInput {
     border: none;
-    outline: none
+    outline: none;
+    color: darkslategray;
+    font-size: 15px;
 }
 
 .headerSearchText {
-    color: grey;
+    color: darkslategray;
     cursor: pointer;
 }
 
@@ -82,7 +88,7 @@
 
 .personOptions{
     position: absolute;
-    top: 50px;
+    top: -130px;
     background-color: white;
     color: grey;
     border-radius: 5px;
@@ -108,12 +114,21 @@
 .optionCountButton {
     width: 30px;
     height: 30px;
-    border: 1px solid blue;
-    color: blue;
+    border: 1px solid rgb(0, 175, 185);
+    color: rgb(0, 175, 185);
     cursor: pointer;
     background-color: white;
 }
 
 .optionCountButton:disabled {
     cursor: not-allowed;
+}
+
+.headerButton{
+    border-radius: 5px;
+    padding: 8px;
+    background-color: rgb(240, 113, 103);
+    color: white;
+    border: none;
+    font-size: 15px;
 }
